# triton_project

./: .gitmodules  README.md
dependencies/.catamaran/: CMakeLists.txt
dependencies/.catamaran/meshes/: base_link.STL  waterwheel.STL
dependencies/.catamaran/urdf/: catamaran.urdf
dependencies/catamaran/: CMakeLists.txt  package.xml
dependencies/catamaran/config/: joint_names_catamaran.yaml
dependencies/catamaran/launch/: display.launch  gazebo.launch
triton/: CMakeLists.txt  package.xml
triton/config/: config.rviz
triton/config/move_base/: costmap_common_params.yaml  dwa_local_planner_params.yaml
triton/launch/: display.launch  gazebo.launch  gazebo_old.launch  gazebo_sdf.launch  world.launch
triton/models/catamaran_full/: model.config  model.sdf
triton/models/catamaran_full/meshes/: l_thruster.STL  r_thruster.STL
triton/models/coca_cola_can/: model.config  model.sdf
triton/models/coca_cola_can/materials/scripts/: coca_cola.material
triton/models/competition_pool/: model.config  model.sdf
triton/models/debris/mirinda_can/: model.sdf
triton/models/debris/mirinda_can/materials/scripts/: mirinda.material
triton/models/debris/pepsi_can/: model.config
triton/models/debris/pepsi_can/materials/scripts/: pepsi_can.material
triton/models/debris/water_bottle/: model.config  model.sdf
triton/models/debris/water_bottle/materials/scripts/: water_bottle.material
triton/models/mirinda_can/: model.config
triton/models/pepsi_can/: model.sdf
triton/models/pool/: model.config  model.sdf
triton/scripts/: thruster_teleop.py  velocity_teleop.py
triton/src/: thruster_plugin.cpp  velocity_plugin.cpp
triton/urdf/: 2D_lidar.urdf  360_camera.urdf  catamaran_full.urdf  catamaran_full.urdf.xacro  catamaran_full_360.urdf.xacro
triton/worlds/: competition_waves.world.xacro  competition_world.sdf  obstacle_world.sdf  platypus.world  water_h.sdf  water_world.sdf
(+7 files in other folders)
